--- a/src/main/resources/templates/user/detail.html
+++ b/src/main/resources/templates/user/detail.html
@@ -133,9 +133,9 @@
                         </li>
                         <li class="nav-item listbutton" role="presentation">
                             <button
-                                    class="nav-link" id="recommandListTab" data-bs-toggle="pill"
-                                    data-bs-target="#recommandList" type="button" role="tab"
-                                    aria-controls="recommandList" aria-selected="false">
+                                    class="nav-link" id="recommendListTab" data-bs-toggle="pill"
+                                    data-bs-target="#recommendList" type="button" role="tab"
+                                    aria-controls="recommendList" aria-selected="false">
                                 추천 가게
                             </button>
                         </li>
@@ -152,7 +152,7 @@
                     <div th:include="/user/detail/reviewList" class="tab-pane fade" id="reviewList" role="tabpanel"
                          aria-labelledby="reviewListTab" tabindex="0">
                     </div>
-                    <div th:include="/user/detail/recommandList" class="tab-pane fade" id="recommandList" role="tabpanel"
+                    <div th:include="/user/detail/recommendList" class="tab-pane fade" id="recommendList" role="tabpanel"
                          aria-labelledby="recommandListTab" tabindex="0">
                     </div>
                 </div>
