--- a/src/main/resources/templates/user/detail/recommendList.html
+++ b/src/main/resources/templates/user/detail/recommendList.html
@@ -33,7 +33,7 @@
           <li class="list-group-item" th:text="${recommend2.comment}"></li>
         </ul>
         <div class="card-body">
-          <button type="button" th:onclick="toggleRecommend([[${recommend2.storeNum}]],this)" class="card-link active">리스트 삭제</button>
+          <button type="button" th:onclick="removeRecommend([[${session.loginUser.userId}]],this)" class="card-link active">리스트 삭제</button>
         </div>
       </div>
     </div>
