--- a/src/main/resources/templates/user/detail/recommend/recommend.html
+++ b/src/main/resources/templates/user/detail/recommend/recommend.html
@@ -1,44 +1,29 @@
 <!DOCTYPE html>
 <html lang="en" xmlns:th="http://www.thymeleaf.org">
-<div class="userDetailContainer rounded-3">
 
-  <!--  <h1>테스트 4번</h1>-->
-  <!--  <p>추천가게 리스트</p>-->
-  <!--  <p>필요 카드 내부 항목</p>-->
-  <!--  <span>1.가게 이미지</span> <span>2.가게 이름</span> <span>3.평점(?)</span>-->
-  <!--  <span>4.한출평</span>-->
 
-  <div>
-    <h1>테스트 4번</h1>
-    <p>추천가게 리스트</p>
-    <p>필요 카드 내부 항목</p>
-    <span>1.가게 이미지</span> <span>2.가게 이름</span> <span>3.평점(?)</span>
-    <span>4.한출평</span>
-
-    <div th:each="recommend : ${recommend}">
-      <span th:text="${recommend}"></span>
-      <button href="#" th:if="${session.loginUser.userId.equals(user.userId)}">DELETE</button>
+<p th:text="${recommend}"></p>
+<!--카드 스타일-->
+<div class="card" style="width: 18rem">
+    <img src="..." class="card-img-top" alt="가게 이미지">
+    <div class="card-body">
+        <h5 class="card-title" >가게 이미지</h5>
     </div>
-
-    <div style="display: flex;">
-      <div th:each="recommend2 : ${recommend}" class="card" style="width: 18rem">
-        <img src="..." class="card-img-top" alt="가게 이미지">
-        <div class="card-body">
-          <h5 class="card-title" >가게 이미지</h5>
-        </div>
-        <ul class="list-group list-group-flush">
-          <li class="list-group-item" th:text="${recommend2.storeName}"></li>
-          <li class="list-group-item">추천 메뉴</li>
-          <li class="list-group-item" >가게 평점</li>
-          <li class="list-group-item" th:text="${recommend2.comment}"></li>
-        </ul>
-        <div class="card-body">
-          <button type="button" th:onclick="removeRecommend([[${session.loginUser.userId}]],this)" class="card-link active">리스트 삭제</button>
-        </div>
-      </div>
+    <ul class="list-group list-group-flush">
+        <li class="list-group-item" th:text="${recommend.storeName}"></li>
+        <li class="list-group-item">추천 메뉴</li>
+        <li class="list-group-item" >가게 평점</li>
+        <li class="list-group-item" th:text="${recommend.comment}"></li>
+    </ul>
+    <div class="card-body">
+        <button type="button" th:onclick="removeRecommend([[${recommend.userId}]],[[${recommend.storeNum}]])" th:text="${recommend.userId} +'-'+${recommend.storeNum}">리스트 삭제</button>
     </div>
-  </div>
 </div>
+
+
+<!--  ------  -->
+
+
 <!--삭제 재확인 모달창-->
 <!--<div class="modal fade" id="deleteReconfirm" tabindex="-1" aria-labelledby="ModalLabel" aria-hidden="true">-->
 <!--  <div class="modal-dialog">-->
