--- a/src/main/resources/templates/layout.html
+++ b/src/main/resources/templates/layout.html
@@ -10,7 +10,7 @@
     <script src="/webjars/bootstrap/5.2.3/dist/js/bootstrap.bundle.min.js"></script>
 
     <script type="text/javascript"
-            src="//dapi.kakao.com/v2/maps/sdk.js?appkey=31ec04b3b6212bb5d30100281bc01b1c"></script>
+            src="//dapi.kakao.com/v2/maps/sdk.js?appkey=31ec04b3b6212bb5d30100281bc01b1c&libraries=services,clusterer,drawing"></script>
 </head>
 <!-- storelist-main 스타일은 store/list.html에서 사용중이니 지우지말것 -->
 <body class="storelist-main" style="background: #FFFAED;">
