--- a/src/main/resources/templates/user/detail/recommend/list.html
+++ b/src/main/resources/templates/user/detail/recommend/list.html
@@ -1,5 +1,5 @@
-<ul class="card-group">
-    <li class="card-group-item" th:each="recommend: ${recommend}">
+<ul class="recommendCard-group">
+    <li class="recommendCard-group-item" th:each="recommend: ${recommend}">
         <th:block th:insert="/user/detail/recommend/recommend"></th:block>
     </li>
 </ul>
