--- a/src/main/resources/static/csstest/userDetailCss.css
+++ b/src/main/resources/static/csstest/userDetailCss.css
@@ -166,9 +166,18 @@
     padding: 2px 10px 2px 10px;
     border-radius: 10px;
 }
-.review-img{
+.review-img {
     width: 150px;
     height: 150px;
-    border:1px solid black;
+    border: 1px solid black;
     border-radius: 10px;
+}
+.recommendCard-group{
+    list-style: none;
+    display: flex;
+    justify-content: center;
+    border:1px solid black;
+}
+.card-index p{
+    border: 1px solid black;
 }
