가게상세는 망해가고, 파일등록을위해 application.yml수정

--- a/src/main/resources/templates/store/list.html
+++ b/src/main/resources/templates/store/list.html
@@ -113,7 +113,7 @@
                 </div>
             </div>
             <!-- 식당 리스트 -->
-            <section style="flex: 8; border:1px solid lightgray; overflow-y: auto; max-height: 595px;">
+            <section style="flex: 8; border:1px solid lightgray; overflow-y: auto; max-height: 595px;" id="storeListCont">
                 <th:block>
                     <div class="d-flex justify-content-center align-items-center" th:each="p:${page.list}" style="border:1px solid gray; min-width: 342px; max-width: 432px;">
                         <div class="col-4">
