사진 올리기

--- a/src/main/resources/templates/user/loginForm.html
+++ b/src/main/resources/templates/user/loginForm.html
@@ -16,13 +16,13 @@
             <!--아이디 박스-->
             <div class="form-outline box_login">
                 <input type="text" id="form3Example3" class="form-control form-control-lg"
-                       placeholder="아이디" name="userId" value=""/>
+                       placeholder="아이디" name="userId" value="user01"/>
                 <label class="form-label" for="form3Example3"></label>
             </div>
             <!--비밀번호 박스-->
             <div class="form-outline box_pw">
                 <input type="password" id="form3Example4" class="form-control form-control-lg"
-                       placeholder="비밀번호" name="pw" value=""/>
+                       placeholder="비밀번호" name="pw" value="password123"/>
                 <label class="form-label" for="form3Example4"></label>
             </div>
             <div class="box_check">
