--- a/src/main/resources/templates/store/report.html
+++ b/src/main/resources/templates/store/report.html
@@ -28,7 +28,7 @@
 <!--</div>-->
 
 <!-- 리뷰를 신고하는 버튼 -->
-<button class="btn btn-outline-primary p-0" style="height: 25px;" onclick="report()">신고하기</button>
+<button class="btn btn-outline-primary px-1 pt-0" style="height: 25px;" onclick="report()">신고하기</button>
 
 <!-- 모달 창 -->
 <div id="reportModal" class="modal">
