--- a/src/main/resources/templates/waiting/waitingAdd.html
+++ b/src/main/resources/templates/waiting/waitingAdd.html
@@ -6,12 +6,6 @@
 <head>
   <meta charset="UTF-8">
   <title>웨이팅 등록</title>
-<!--  <meta name="viewport" content="width=device-width, initial-scale=1">-->
-<!--  &lt;!&ndash; Bootstrap CSS &ndash;&gt;-->
-<!--  <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css"-->
-<!--        integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">-->
-<!--  <link rel="stylesheet" href="css/waiting.css">-->
-
 </head>
 <body>
 <div layout:fragment="content">
@@ -30,7 +24,7 @@
     </div>
 
     <div class="row">
-      <div class="col-lg-8 col-md-12">
+      <div class="col-lg-12">
         <!-- 가게 정보? -->
         <div class="card store-info">
           <div class="card-body p-4">
@@ -42,7 +36,8 @@
               <div class="col-sm-6">
                 <div class="waiting-input">
                   <h4>웨이팅 등록</h4>
-                  <form th:action="@{/waiting/waitingAdd.do}" method="get">
+<!--                  <form name="waitingAdd" id="waitingAdd" method="post" action="/{storeNum}/waitingAdd.do">-->
+                    <form name="waitingAdd" id="waitingAdd" method="post" action="waitingAdd.do">
 
                     <div class="form-group">
                       <label for="people-input">인원 수</label>
@@ -50,7 +45,7 @@
                         <div class="input-group-prepend">
                           <button class="btn btn-outline-secondary" type="button" id="minusBtn">-</button>
                         </div>
-                        <input type="number" class="form-control" id="people-input" name="user_people"
+                        <input style="width: 55px;" type="number" class="form-control" id="people-input" name="user_people"
                                placeholder="인원 수를 입력하세요." th:max="${storeswaiting.maxPeople}" min="1">
                         <div class="input-group-append">
                           <button class="btn btn-outline-secondary" type="button" id="plusBtn">+</button>
