--- a/src/main/resources/templates/store/detail.html
+++ b/src/main/resources/templates/store/detail.html
@@ -239,7 +239,7 @@
             </div>
             <th:block th:if="${session.loginUser!=null && #strings.equals(session.loginUser.userId,r.userId)}">
               <div class="d-flex justify-content-end">
-                <a th:href="'/review/'+${r.reviewNum}+'/remove.do'" class="btn btn-outline-danger px-1 pt-0" style="height: 25px;">삭제하기</a>
+                <a th:href="'/review/'+${s.storeNum}+'/'+${r.reviewNum}+'/remove.do'" class="btn btn-outline-danger px-1 pt-0" style="height: 25px;">삭제하기</a>
               </div>
             </th:block>
             <th:block th:unless="${session.loginUser!=null && #strings.equals(session.loginUser.userId,r.userId)}">
@@ -248,7 +248,7 @@
           </div>
         </div>
         <div class="card-body d-flex">
-          <img th:src="'http://localhost:8088'+${r.img}" style="width: 150px; height: 150px;">
+          <img th:src="${r.img}" style="width: 150px; height: 150px;">
           <div class="review-text" style="border: #222 solid 1px; width: 440px; height: 150px;">
             <p th:text="${r.content}" class="review-description m-0"></p>
             <small th:text="${r.menuName.name}+' : '+${r.comment}"></small>
