팔로우 기능 정상 작동 안됩니다

--- a/src/main/resources/templates/layout.html
+++ b/src/main/resources/templates/layout.html
@@ -25,5 +25,7 @@
     </script>
 
 </body>
-<script th:src="@{/public/js/Recommend.js}"></script>
+<script src="/public/js/Recommend.js"></script>
+<script src="/public/js/Jjim.js"></script>
+<script src="/public/js/Follow.js"></script>
 </html>
