--- a/src/main/resources/templates/store/detail.html
+++ b/src/main/resources/templates/store/detail.html
@@ -57,8 +57,20 @@
     <ul class="list-group">
       <li style="list-style:none;">
         <div class="btn-group store linkBtn">
-          <a class="btn btn-outline-dark btn-sm">찜</a>
-          <a class="btn btn-outline-dark btn-sm" id="share-btn" data-clipboard-text="https://example.com">공유</a>
+<!--        찜 버튼 구현-->
+          <th:block th:if="${session.loginUser!=null}">
+            <th:block th:if="${checkjjim!=null && checkjjim.storeNum==s.storeNum}">
+              <button type="button" class="btn btn-outline-dark btn-sm active" th:onclick="addJjimList([[${session.loginUser.userId}]],[[${s.storeNum}]],this)">찜</button>
+            </th:block>
+            <th:block th:if="${checkjjim==null}">
+              <button type="button" class="btn btn-outline-dark btn-sm" th:onclick="addJjimList([[${session.loginUser.userId}]],[[${s.storeNum}]],this)">찜</button>
+            </th:block>
+          </th:block>
+          <th:block th:if="${session.loginUser==null}">
+            <button type="button" class="btn btn-outline-dark btn-sm">찜</button>
+          </th:block>
+<!--     -------------     -->
+          <a class="btn btn-outline-dark btn-sm " id="share-btn" data-clipboard-text="https://example.com">공유</a>
           <a class="btn btn-outline-dark btn-sm" th:href="${s.instaurl}">인스타</a>
           <a class="btn btn-outline-dark btn-sm" th:href="${s.facebookurl}">페이스북</a>
           <a class="btn btn-outline-dark btn-sm" th:href="${s.youtubeurl}">유튜브</a>
@@ -323,7 +335,7 @@
   p{
     margin: 0;
   }
-  .linkBtn a{
+  .linkBtn button,.linkBtn a{
     background-color: #FFE3A9;
   }
   .waiting a{
