--- a/src/main/resources/templates/user/detail/review/review.html
+++ b/src/main/resources/templates/user/detail/review/review.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <html lang="en" xmlns:th="http://www.thymeleaf.org">
-<div class="userDetailContainer rounded-3" >
+<div class="userDetailContainer rounded-3 overflow-auto">
 <!--    <h1>테스트 3번</h1>-->
 <!--    <p>리뷰작성 리스트</p>-->
 <!--    <p>필요 카트 내부 항목 리스트</p>-->
