--- a/src/main/resources/static/csstest/userDetailCss.css
+++ b/src/main/resources/static/csstest/userDetailCss.css
@@ -46,7 +46,7 @@
     color: black;
     font-weight: bold;
 }
-.profilebutton:hover{/*버튼 상태변화*/
+.profilebutton:hover, .profilebutton:active{/*버튼 상태변화*/
     color: #4477f9;
     background-color: #ffe69c;
 }
@@ -61,13 +61,15 @@
     align-items: center;
 }
 
-.followbox{/*팔로우 정보 표시 부분 css*/
+.followbox, .followbox:hover{/*팔로우 정보 표시 부분 css*/
     border : 1px solid black;
     display: flex;
     justify-content: center;
     border-radius: 50px;
     width: 300px;
     overflow: hidden;
+    text-decoration: none;
+    color: black;
 }
 .followbox span{/*팔로우박스*/
     /*border : 1px solid black;*/
@@ -113,7 +115,7 @@
     border: 1px solid black;
     width: 700px;
     height: 50vh;
-    overflow-y: auto;
+    /*overflow-y: auto;*/
 }
 #sharelink{
     color: #4477f9;
