--- a/src/main/resources/templates/user/detail.html
+++ b/src/main/resources/templates/user/detail.html
@@ -39,16 +39,17 @@
                     <a class="profilebutton" th:href="@{'/user/{userId}/modify.do'(userId=${user.userId})}">수정페이지</a>
                 </th:block>
                 <th:block th:if="${session.loginUser.userId!=user.userId}">
-                    <a class="profilebutton">팔로우</a>
+                    <button class="btn profilebutton" type="button" th:onclick="FollowListToggle([[${user.userId}]],this)"
+                   >팔로우</button>
                 </th:block>
             </div>
 
         </div>
         <div class="userCard-right">
-            <div class="followbox">
+            <a class="followbox" th:href="@{'/user/{userId}/follow.do'(userId=${user.userId})}">
                 <span style="background-color: #61b977">팔로워</span>
                 <span>팔로잉</span>
-            </div>
+            </a>
 
             <p th:text="${user.introduce}+${user.faceUrl}+${user.youtubeUrl}+${user.instaUrl}"></p>
 
