--- a/src/main/resources/templates/user/detail/jjim/jjim.html
+++ b/src/main/resources/templates/user/detail/jjim/jjim.html
@@ -1,32 +1,56 @@
 <!DOCTYPE html>
 <html lang="en" xmlns:th="http://www.thymeleaf.org">
-<div class="userDetailContainer rounded-3">
-    <div>
-        <table class="table table-hover">
-        <thead>
-        <tr>
-            <td>번호</td>
-            <td>가게 이름</td>
-            <td>위치</td>
-            <td>
-                <div>
-                    정렬
-                </div>
-            </td>
-        </tr>
-        </thead>
-        <tbody>
-        <tr th:each="jjim : ${jjim}">
-            <th:block th:if="${jjim.jjStatus.equals('공개')}">
-                <td th:text="${jjim.listNum}"></td>
-                <td>
-                    <a th:href="@{'/store/{storeNum}/detail.do'(storeNum=${jjim.storeNum})}" th:text="${jjim.storeName}"></a>
-                </td>
-                <td th:text="${jjim.address}"></td>
-            </th:block>
-        </tr>
-        </tbody>
-        </table>
+<div class="userDetailContainer rounded-3 d-flex flex-column justify-content-between">
+
+    <div class="overflow-auto">
+
+            <table class="table table-hover">
+                <thead>
+                <tr>
+                    <td>번호</td>
+                    <td>가게 이름</td>
+                    <td>위치</td>
+                    <td>
+                        <div>
+                            정렬
+                        </div>
+                    </td>
+                </tr>
+                </thead>
+                <tbody>
+                <tr th:each="jjim : ${jjim}">
+                    <th:block th:if="${session.loginUser.userId==jjim.userId}">
+                        <td th:text="${jjim.listNum}"></td>
+                        <td>
+                            <a th:href="@{'/store/{storeNum}/detail.do'(storeNum=${jjim.storeNum})}" th:text="${jjim.storeName}"></a>
+                        </td>
+                        <td th:text="${jjim.address}"></td>
+                        <td>
+                            <button></button>
+                        </td>
+                    </th:block>
+                    <th:block th:if="${session.loginUser==null || session.loginUser.userId!=jjim.userId}">
+                        <th:block th:if="${jjim.jjStatus.equals('공개')}">
+                            <td th:text="${jjim.listNum}"></td>
+                            <td>
+                                <a th:href="@{'/store/{storeNum}/detail.do'(storeNum=${jjim.storeNum})}" th:text="${jjim.storeName}"></a>
+                            </td>
+                            <td th:text="${jjim.address}"></td>
+                        </th:block>
+                    </th:block>
+
+                </tr>
+                </tbody>
+            </table>
     </div>
+
+    <div class="d-grid gap-2 d-md-flex justify-content-md-end border-top" style="padding: 5px;">
+        <button class="btn btn-primary me-md-2 border-top border-success p-2" type="button">적용</button>
+    </div>
+
+
+
+
 </div>
+
 </html>
