--- a/src/main/resources/templates/user/detail/waiting/waiting.html
+++ b/src/main/resources/templates/user/detail/waiting/waiting.html
@@ -1,4 +1,4 @@
-<div class="userDetailContainer rounded-3">
+<div class="userDetailContainer rounded-3 overflow-auto">
     <div>
         <table class="table table-hover">
         <thead>
