--- a/src/main/resources/templates/store/detail.html
+++ b/src/main/resources/templates/store/detail.html
@@ -37,8 +37,8 @@
   </div>
 
   <div class="store">
-    <span class="starPoint">★4.45/</span>
-    <span th:text="'방문자리뷰 '+${s.reviewCount}" class="starReview"></span>
+    <span th:text="'★'+${#strings.substring(s.starAvg.starAverage, 0, 3)}" class="starPoint"></span>
+    <span th:text="'/방문자리뷰 '+${s.reviewCount}" class="starReview"></span>
   </div>
   <div class="store">
     <p class="badge text-bg-warning waitingTeam">현재 10팀 대기중입니다.</p>
@@ -119,7 +119,7 @@
 
   <!-- 예약 -->
   <div class="waiting d-grid gap-2 col-6 mx-auto" id="waiting">
-    <a class="btn btn-warning" href="#" type="button">
+    <a class="btn btn-warning" th:href="'/waiting/'+${s.storeNum}+'/waitingAdd.do'" type="button">
       <i class="bi bi-shop"></i>
       예약하러 가기
     </a>
