병합후 오류ㅜ수정

--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -813,7 +813,7 @@
     </footer>
     <button type="button" class="btn btn-outline-warning"
             style="position: fixed; bottom: 20px; right: 130px; width: 100px;" data-bs-container="body"
-            data-bs-toggle="popover" data-bs-placement="top" data-bs-content="채팅내역?" href="/chat/room/list.do">
+            data-bs-toggle="popover" data-bs-placement="top" data-bs-content="채팅내역?" href="/chattingRoom.do">
         채 팅
         <span class="position-absolute top-0 start-100 translate-middle badge rounded-pill bg-danger">
     60
