--- a/src/main/resources/templates/waiting/waitingAdd.html
+++ b/src/main/resources/templates/waiting/waitingAdd.html
@@ -6,6 +6,7 @@
 <head>
   <meta charset="UTF-8">
   <title>웨이팅 등록</title>
+  <script src="/public/js/WaitingAdd.js" defer th:inline="javascript"></script>
 </head>
 <body>
 <div layout:fragment="content">
